[package]
name = "ruspk"
version = "0.1.0"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Erros
anyhow = "1.0"
# Loggs
env_logger = "0.7"
# Connect with the database
diesel = { version = "1.4", features = ["chrono", "r2d2", "postgres", "mysql", "sqlite"] }
r2d2 = "0.8"
# grap environemt vars
dotenv = "0.9.0"

# Web framework / server
actix-web = "2"
actix-rt = "1"

# Serialization/Deserialization
serde_json = "1"
serde = "1"
serde_derive = "1"
serde_with = "1.4"

#  Date and time
chrono = { version = "0.4", features = ["serde"] }

#async
futures = "0.3.1"
