[package]
name = "ruspk"
version = "0.1.0"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["mysql"]
mysql = ["diesel/mysql"]
postgresql = ["diesel/postgres"]
sqlite = ["diesel/sqlite", "libsqlite3-sys"]
# mysql = ["diesel/mysql", "diesel_migrations/mysql"]
# postgresql = ["diesel/postgres", "diesel_migrations/postgres"]
# sqlite = ["diesel/sqlite", "diesel_migrations/sqlite", "libsqlite3-sys"]


[dependencies]

# Erros
anyhow = "1.0"
# Logs
env_logger = "0.7"
# Database
diesel = { version = "1.4", features = ["chrono", "r2d2"] }
r2d2 = "0.8"
# diesel_migrations = "1.4.0"
# Bundled SQLite
libsqlite3-sys = { version = "0.17.3", features = ["bundled"], optional = true }

# grap environemt vars
dotenv = "0.9.0"

# Web framework / server
actix-web = "2"
actix-rt = "1"

# Serialization/Deserialization
serde_json = "1"
serde = "1"
serde_derive = "1"
serde_with = "1.4"

#  Date and time
chrono = { version = "0.4", features = ["serde"] }

#async
futures = "0.3.1"
