[package]
name = "ruspk"
version = "0.1.2"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"
description= "Rust rewrite of spkrepo's / GET API https://github.com/SynoCommunity/spkrepo"
keywords = ["synology"]
repository = "https://github.com/publicarray/ruspk"
readme = "README.md"
license = "GPL-3.0-only"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["mysql"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite", "libsqlite3-sys"]
# mysql = ["diesel/mysql", "diesel_migrations/mysql"]
# postgresql = ["diesel/postgres", "diesel_migrations/postgres"]
# sqlite = ["diesel/sqlite", "diesel_migrations/sqlite", "libsqlite3-sys"]


[dependencies]

# Erros
anyhow = "1.0"
# Logs
log = "0.4"
env_logger = "0.7"
# Database
diesel = { git = "https://github.com/diesel-rs/diesel/",  features = ["chrono", "r2d2"] }
# diesel = { version = "1.4", features = ["chrono", "r2d2"] }
r2d2 = "0.8"
# diesel_migrations = "1.4.0"
# Bundled SQLites
libsqlite3-sys = { version = "0.18", features = ["bundled"], optional = true }

# grap environemt vars
dotenv = "0.9"

# global static vars at runtime
lazy_static = "1.4"

# Web framework / server
actix-web = "2"
actix-rt = "1"

# Serialization/Deserialization
serde_json = "1"
serde = "1"
serde_derive = "1"
serde_with = "1.4"

#  Date and time
chrono = { version = "0.4", features = ["serde"] }
