[package]
name = "ruspk"
version = "0.1.6"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"
description= "Rust rewrite of spkrepo's / GET API https://github.com/SynoCommunity/spkrepo"
keywords = ["synology"]
repository = "https://github.com/publicarray/ruspk"
readme = "../README.md"
license = "GPL-3.0-only"
build = "build.rs"
default-run = "ruspk"
rust-version = "1.31"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
is-it-maintained-issue-resolution = { repository = "publicarray/ruspk" }
is-it-maintained-open-issues = { repository = "publicarray/ruspk" }
maintenance = { status = "passively-maintained" }

[features]
default = ["postgres"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
# mysql = ["diesel/mysql", "diesel_migrations/mysql"]
# postgresql = ["diesel/postgres", "diesel_migrations/postgres"]
# sqlite = ["diesel/sqlite", "diesel_migrations/sqlite", "libsqlite3-sys"]

[dependencies]
# Errors
anyhow = "1.0"
# Logs
log = "0.4"
env_logger = "0.9"
# Database
# diesel = { git = "https://github.com/diesel-rs/diesel",  features = ["chrono", "r2d2"] }
diesel = { version = "2.0", features = ["chrono", "r2d2"] }
r2d2 = "0.8"
# diesel_migrations = "1.4.0"
# Bundled SQLites
libsqlite3-sys = { version = "0.25", features = ["bundled"], optional = true }

# OpenPHP - rpgp check signatures
sequoia-openpgp = "*"
# pgp = "0.7"
md5 = "0.7"
async-tar = "0.4"
# https://github.com/alexcrichton/tar-rs/pull/178
# https://github.com/alexcrichton/tar-rs/issues/177
tar = { git = "https://github.com/dvc94ch/tar-rs", branch = "append-entry" }

tempfile = "3"
futures = "0.3"
async-std = "1.12"
#sanitize-filename = "0.3.0"

regex = "1"

# grab environment vars
dotenv = "0.15"

# global static vars at runtime
lazy_static = "1.4"

# Web framework / server https://github.com/actix/actix-web/blob/master/MIGRATION.md
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2"
actix-files = "0.6"
actix-cors = "0.6"
actix-web-httpauth = "0.6"
# actix-identity = "0.3.1"
actix-web-grants = "3"
jsonwebtoken = "8"
rand = "0.8"
bcrypt = "0.13"
# argon2 = "0.3"
# rand_core = { version = "0.6", features = ["std"] }

# to make standalone http requests
awc = { version = "3", features = ["rustls"] }
rustls = "0.20"
webpki-roots = "*"

# Serialization/Deserialization
serde_json = "1"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_with = "2"
serde_qs = "0.10"
toml = "0.5"

# percent encode / url encoding
percent-encoding = "2"

#  Date and time
chrono = { version = "0.4", features = ["serde"] }

evmap = "10"
evmap-derive = "0.2"


# https://crates.io/crates/semver
# https://crates.io/crates/infer
# https://crates.io/crates/tempfile
